# Themal-diffusivity-instrument

./: .gitignore  LICENSE  README.md  Thermal-diffusivity-instrument.py  pyproject.toml
src/THDInstrument/: THD.py  __init__.py  hardware.py  instrument_base.py  threading_decorators.py
src/THD_Arduino/: THD_Arduino.ino
